--- a/package.json
+++ b/package.json
@@ -6,16 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^5.1.4",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.4.6"
     },
     "dependencies": {
-        "rete": "^2.0.5",
-        "rete-area-plugin": "^2.1.1",
-        "rete-connection-plugin": "^2.0.5",
-        "rete-vue-render-plugin": "^2.0.0-beta.25",
-        "vue": "^3.5.6"
+        "drawflow": "^0.0.60"
     }
 }
