--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "google/cloud-text-to-speech": "^1.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "openai-php/laravel": "^0.10.1"
