--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "google/cloud-text-to-speech": "^1.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "openai-php/laravel": "^0.10.1"
+        "openai-php/laravel": "^0.10.1",
+        "smalot/pdfparser": "^2.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
