--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "openai-php/laravel": "^0.10.1",
+        "phpoffice/phpword": "^1.3",
         "smalot/pdfparser": "^2.11"
     },
     "require-dev": {
